test/types/scalar/bradc/uint64FnInt.good
uint64FnInt.chpl:8: error: unresolved call 'foo(uint(64), int(64))'
uint64FnInt.chpl:4: note: candidates are: foo(x: uint(64), y: uint(64))
